feat(config): Phase 4 — tests, examples, KSP scaffold
Completes Phase 4 of the Kotlin Multiplatform migration (docs/kotlin-migration-plan.md):

Build/examples:
- Re-include examples/* and a new lena-config-ksp module in settings.gradle.kts
  (both were dropped from the build during the Phase 1-3 overhaul)
- Add lena.examples convention plugin (Kotlin JVM + application + a custom
  exec task, since `application` only registers `run`)
- examples/simple-config stays Java, updated for the new API
  (returnNullForMissing()/createChildren() no longer exist)
- examples/nested-config rewritten in Kotlin using property delegates and
  explicit nested composition (no global registry)
- Scaffold lena-config-ksp per the migration plan: compiles and wires a
  no-op SymbolProcessor into the KSP pipeline; generation logic deferred

Tests: port all 12 old JUnit5/AssertJ/Mockito tests into the KMP source-set
structure, deleting ConfigurationPropertiesRegistryTest (registry is gone)
and rewriting ConfigurationPropertiesTest for the delegate API:
- commonTest: platform-agnostic logic via kotlin.test + fakes (Mockito is
  JVM-only), table-driven loops instead of @ParameterizedTest (doesn't run
  on native)
- jvmTest: System.getenv/getProperties via system-stubs-jupiter, plus
  JVM-specific NumberFormatException message format and NFD normalization
- nativeTest: proves native targets actually execute commonMain logic and
  documents native's best-effort (non-decomposing) string normalization

Two real bugs surfaced during the port, not just test-writing:
- EnvironmentNameResolver dropped a `.filter { it.isNotEmpty() }` that had
  silently changed behavior for fully-symbolic segments (e.g. "()$%" should
  resolve with a trailing "_", not get truncated) — removed to restore the
  documented/tested behavior
- The `exec` task forwarded *all* JVM system properties from the Gradle
  daemon into the example's child JVM, including java.home — corrupting
  java.text.Normalizer's ICU data lookup 